# bashers

./: .gitignore  CHANGELOG.md  COVERAGE.md  Cargo.toml  DEVELOPMENT.md  Dioxus.toml  README.md  RELEASING.md  generate_scripts.py  hatch_build_hook.py  install.sh  pyproject.toml  release-plz.toml
.github/workflows/: ci.yml  release-plz-release.yml  release-plz.yml  release-tag.yml  release.yml
bashers/: _bashers_lib  bashers  update
bashers/project_utils/: setup  show  update
scripts/: bashers  install.sh  local.sh  setup-local.sh
src/: cli.rs  lib.rs  main.rs
src/commands/: gh.rs  help.rs  kmg.rs  mod.rs  setup.rs  show.rs  update.rs  watch.rs
src/commands/docker/: build.rs
src/commands/git/: sync.rs
src/commands/kube/: kmg.rs  mod.rs
src/commands/kube/track/: mod.rs  simple.rs  tui.rs
src/commands/kube/track/tui/: event.rs  kube.rs  mod.rs  shared.rs  state.rs  theme.rs  traits.rs
src/commands/self_cmd/: update.rs
src/components/: mod.rs
src/components/button/: component.rs
src/components/tabs/: component.rs
src/components/toast/: mod.rs
src/gui/: mod.rs  server_fns.rs  sidebar.rs  state.rs  theme.rs
src/gui/pages/: kube_track.rs  mod.rs  show.rs  update.rs  watch.rs
src/tui/: mod.rs
src/utils/: colors.rs  mod.rs  multi_progress.rs  packages.rs  project.rs  spinner.rs
tests/: integration_test.rs  test_bashers.py
