[package]
name = "bashers"
version = "0.8.4"
edition = "2021"
authors = ["Sung Kim"]
description = "Installable cli helpers"
license = "MIT"
readme = "README.md"
default-run = "bashers"

[lib]
name = "bashers"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "bashers"
path = "src/main.rs"

[[bin]]
name = "bs"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
pyo3 = { version = "0.28", features = ["extension-module"], optional = true }
anyhow = "1.0"
which = "8"
fuzzy-matcher = "0.3"
termcolor = "1.4"
indicatif = "0.18.3"
atty = "0.2"
regex = "1.10"
inquire = "0.9"
ctrlc = "3.4"
ratatui = "0.30.0"
crossterm = "0.29"
ansi-to-tui = "8.0.1"
diff = "0.1"

[features]
default = []
pyo3 = ["dep:pyo3"]
