[package]
name = "bashers"
version = "0.8.8"
edition = "2021"
authors = ["Sung Kim"]
description = "Installable cli helpers"
license = "MIT"
readme = "README.md"
default-run = "bashers"

[lib]
name = "bashers"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "bashers"
path = "src/main.rs"

[[bin]]
name = "bs"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
pyo3 = { version = "0.28", features = ["extension-module"], optional = true }
anyhow = "1.0"
which = "8"
fuzzy-matcher = "0.3"
termcolor = "1.4"
spinoff = "0.8.0"
indicatif = "0.18"
atty = "0.2"
regex = "1.10"
inquire = "0.9"
ctrlc = "3.4"
ratatui = "0.30.0"
crossterm = "0.29"
ansi-to-tui = "8.0.1"
diff = "0.1"
serde = { version = "1", features = ["derive"], optional = true }
dioxus = { version = "0.7", features = ["fullstack"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", version = "0.0.1", default-features = false, optional = true }

[features]
default = []
pyo3 = ["dep:pyo3"]
gui = ["dep:dioxus", "dep:dioxus-primitives", "dep:serde", "dep:tokio", "server"]
server = ["dioxus/server"]
web = ["dep:dioxus", "dep:dioxus-primitives", "dep:serde", "dioxus/web"]
