[build-system]
requires = ["maturin>=1.0,<3.0"]
build-backend = "maturin"

[project]
name = "bashers"
version = "0.8.8"
description = "Installable cli helpers"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[project.scripts]
bashers = "bashers:run_cli"
bs = "bashers:run_cli"

[tool.maturin]
features = ["pyo3"]
